--- a/WeCrowd/Base.lproj/CampaignFlow.storyboard
+++ b/WeCrowd/Base.lproj/CampaignFlow.storyboard
@@ -233,7 +233,7 @@
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="mlu-an-yCV">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="mlu-an-yCV">
                                                     <rect key="frame" x="0.0" y="0.0" width="584" height="200"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="80" id="H56-eJ-L06"/>
