--- a/WeCrowd/Base.lproj/LaunchScreen.xib
+++ b/WeCrowd/Base.lproj/LaunchScreen.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -37,9 +37,15 @@
                         <constraint firstAttribute="centerY" secondItem="kId-c2-rCX" secondAttribute="centerY" id="3oe-xm-Hub"/>
                         <constraint firstAttribute="width" constant="230" id="8U2-tD-YbC"/>
                         <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="dyg-Gd-NG1" secondAttribute="trailing" id="Fv6-iw-a58"/>
+                        <constraint firstItem="dyg-Gd-NG1" firstAttribute="centerY" secondItem="kId-c2-rCX" secondAttribute="centerY" id="LCP-XS-9VB"/>
                         <constraint firstAttribute="height" constant="80" id="Nri-tM-vtO"/>
                         <constraint firstAttribute="centerX" secondItem="dyg-Gd-NG1" secondAttribute="centerX" constant="75" id="yEM-Eu-f73"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="3oe-xm-Hub"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
